--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
         <!-- Optional theme -->
         <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway|Josefin+Slab" rel="stylesheet">
+        <script src="https://use.fontawesome.com/c73baa3c72.js"></script>
     </head>
     <body>
         <nav>
@@ -17,8 +18,8 @@
             <div class="nav-link">
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -33,17 +34,23 @@
             <h2>About Me</h2>
             <div class="row-3">
                 <div class="col">
-                    <img src="#" alt="Developer">
+                    <div class="img-outer">
+                        <img src="images/developer.png" alt="Developer">
+                    </div>
                     <h3>Developer</h3>
                     <p>From website to mobile apps, I can handle both front-end and back-end pretty well.</p>
                 </div>
                 <div class="col">
-                    <img src="#" alt="Designer">
+                    <div class="img-outer">
+                        <img src="images/designer.png" alt="Designer">
+                    </div>
                     <h3>Designer</h3>
                     <p>Besides website design, I've also involved in other designing stuff such as logo and T-shirt.</p>
                 </div>
                 <div class="col">
-                    <img src="#" alt="Student">
+                    <div class="img-outer">
+                        <img src="images/student.png" alt="Student">
+                    </div>
                     <h3>Student</h3>
                     <p>I'm still a university student pursuing a degree in Computer Science and are constantly trying to gain new knowledge and skills.</p>
                 </div>
@@ -52,38 +59,91 @@
 
         <div id="projects">
             <h2>Projects</h2>
-            <div>
-                <h4>Tribute to Jackie Chan</h4>
-            </div>
-            <div>
-                <h4>Random Quote Machine</h4>
-            </div>
-            <div>
-                <h4>Local Weather View</h4>
-            </div>
-            <div>
-                <h4>Wikipedia Viewer</h4>
+            <div class="row-4">
+                <div class="col">
+                    <div class="s-shot">
+                        <div>
+                            <div class="darken">
+                                <p>Coming Soon</p>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Tribute to Jackie Chan</h3>
+                </div>
+                <div class="col">
+                    <div class="s-shot">
+                        <div>
+                            <div class="darken">
+                                <p>Coming Soon</p>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Random Quote Machine</h3>
+                </div>
+                <div class="col">
+                    <div class="s-shot">
+                        <div>
+                            <div class="darken">
+                                <p>Coming Soon</p>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Local Weather View</h3>
+                </div>
+                <div class="col">
+                    <div class="s-shot">
+                        <div>
+                            <div class="darken">
+                                <p>Coming Soon</p>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Wikipedia Viewer</h3>
+                </div>
             </div>
         </div>
-        <div>
+
+        <div id="contact">
             <h2>Contact</h2>
             <form>
-                <label>Name: <input type="text" name="name" value="Name"></label>
-                <label>E-mail: <input type="text" name="email" value="E-mail"></label>
-                <label>Message</label>
-                <textarea rows="4" cols="50">Your message here...</textarea>
-                <input type="submit" value="Submit">
-                <input type="reset" value="Reset">
-            </form>
+                <div class="input-set">
+                    <div class="input-col">
+                        <label for="name">Name:</label>
+                        <input type="text" name="name" value="">
+                    </div>
+                    <div class="input-col">
+                        <label>E-mail:</label>
+                        <input type="text" name="email" value="" size="25">
+                    </div>
+                </div>
+                <div class="input-set">
+                    <label>Message</label>
+                    <textarea rows="4" cols="50" placeholder="Your message here..."></textarea>
+                </div>
+                <div class="btn">
+                    <input type="submit" value="Submit">
+                    <input type="reset" value="Reset">
+                </div>
+            </form> 
+            <div id="social-media">
+                <ul>
+                    <li><a href="https://twitter.com/jun13blu" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://my.linkedin.com/in/june-poh-7bb8a0137" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.freecodecamp.com/jun13blu" target="_blank"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/jun13blu" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
         </div>
+
         <footer>
             <p>Design and coded by June</p>
         </footer>
+
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-        <script src="main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
